Minor fixes to spacing on landing page

--- a/public/styles/landing_style.css
+++ b/public/styles/landing_style.css
@@ -51,6 +51,7 @@
   }
   
   #statuscafe {
+    margin: .5em;
     padding: .5em;
     background-color: seashell;
     border: 1px dashed #bf7398;
